[package]
name = "duckpx"
version = "0.1.0"
edition = "2021"
authors = ["Change Goose"]
license = "MIT"
description = "Ein Tool zur Anzeige von Pixel- und Millimetergrößen mit DPI-Berechnung."

[dependencies]
gtk = { version = "0.15", features = ["v3_20"] }
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
