[package]
name = "duckpx"
version = "0.1.0"
edition = "2025"
authors = ["Change Goose"]
license = "MIT"
description = "Ein Tool zur Anzeige von Pixel- und Millimetergrößen mit DPI-Berechnung."
 
[dependencies]
gtk = { version = "0.15", features = ["v3_20"] }
webbrowser = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
dirs = "4.0"  # Für Benutzerverzeichnisse
