[package]
name = "duckpx"
version = "1.2.0"
edition = "2021"
authors = ["Change Goose"]
license = "MIT"
description = "Ein Tool zur Anzeige von Pixel- und Millimetergrößen mit DPI-Berechnung."
 
[dependencies]
gtk = { version = "0.15", features = ["v3_20"] }
webbrowser = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
dirs = "4.0"
